--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <a href="week8.html"><b>8</b></a>
 <a href="week9.html"><b>9</b></a>
 <a href="week10.html"><b>10</b></a>
-<a href="week11.html"><b>11P</b></a><br>
+<a href="week11.html"><b>11</b></a>
+<a href="week12.html"><b>12P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -69,44 +70,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(5)</font></td>
-    <td><font size=2>8</font></td>
+    <td><font size=2>9</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>6920</font></td>
-    <td><font size=2>5185</font></td>
+    <td><font size=2>7410</font></td>
+    <td><font size=2>5655</font></td>
     <td><font size=2>945</font></td>
     <td><font size=2>455</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(9)</font></td>
-    <td><font size=2>6</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6945</font></td>
-    <td><font size=2>5645</font></td>
+    <td><font size=2>7920</font></td>
+    <td><font size=2>6185</font></td>
     <td><font size=2>1255</font></td>
     <td><font size=2>265</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6870</font></td>
-    <td><font size=2>6350</font></td>
+    <td><font size=2>7640</font></td>
+    <td><font size=2>6810</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>285</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>States(3)</font></td>
     <td><font size=2>4</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>5590</font></td>
-    <td><font size=2>7470</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>5945</font></td>
+    <td><font size=2>7900</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Steven(1)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>6465</font></td>
-    <td><font size=2>7745</font></td>
+    <td><font size=2>6895</font></td>
+    <td><font size=2>8100</font></td>
     <td><font size=2>830</font></td>
-    <td><font size=2>495</font></td>
+    <td><font size=2>430</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -118,41 +119,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>7790</font></td>
-    <td><font size=2>6280</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>8330</font></td>
+    <td><font size=2>7255</font></td>
     <td><font size=2>1070</font></td>
     <td><font size=2>340</font></td>
     <td><font size=2>3</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>6680</font></td>
-    <td><font size=2>6980</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7005</font></td>
+    <td><font size=2>7470</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Sam(4)</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5</font></td>
-    <td><font size=2>5400</font></td>
-    <td><font size=2>5395</font></td>
-    <td><font size=2>785</font></td>
-    <td><font size=2>255</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>John(8)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>5550</font></td>
-    <td><font size=2>6305</font></td>
+    <td><font size=2>6040</font></td>
+    <td><font size=2>6630</font></td>
     <td><font size=2>795</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td>
+<tr><td><font size=2>Sam(4)</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>5860</font></td>
+    <td><font size=2>6165</font></td>
+    <td><font size=2>785</font></td>
+    <td><font size=2>255</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(2)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>5920</font></td>
-    <td><font size=2>6775</font></td>
+    <td><font size=2>8</font></td>
+    <td><font size=2>6390</font></td>
+    <td><font size=2>7265</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>160</font></td>
     <td><font size=2>1</font></td>
