--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 <a href="week10.html"><b>10</b></a>
 <a href="week11.html"><b>11</b></a>
 <a href="week12.html"><b>12</b></a>
-<a href="week13.html"><b>13P</b></a><br>
+<a href="week13.html"><b>13</b></a>
+<a href="week14.html"><b>14P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -72,44 +73,44 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>Rich(5)</font></td>
     <td><font size=2>10</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>8255</font></td>
-    <td><font size=2>6080</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>8535</font></td>
+    <td><font size=2>6405</font></td>
     <td><font size=2>945</font></td>
-    <td><font size=2>455</font></td>
+    <td><font size=2>280</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>Randy(9)</font></td>
-    <td><font size=2>7</font></td>
+    <td><font size=2>8</font></td>
     <td><font size=2>5</font></td>
-    <td><font size=2>8380</font></td>
-    <td><font size=2>6745</font></td>
+    <td><font size=2>9270</font></td>
+    <td><font size=2>7345</font></td>
     <td><font size=2>1255</font></td>
     <td><font size=2>265</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
 <tr><td><font size=2>Matthew(7)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>8140</font></td>
-    <td><font size=2>7415</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>8740</font></td>
+    <td><font size=2>8305</font></td>
     <td><font size=2>1245</font></td>
     <td><font size=2>285</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>Steven(1)</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>7755</font></td>
-    <td><font size=2>8495</font></td>
-    <td><font size=2>860</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>1</font></td>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>6370</font></td>
-    <td><font size=2>8745</font></td>
+    <td><font size=2>7015</font></td>
+    <td><font size=2>9105</font></td>
     <td><font size=2>890</font></td>
     <td><font size=2>180</font></td>
     <td><font size=2>2</font></td>
+<tr><td><font size=2>Steven(1)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>9</font></td>
+    <td><font size=2>8090</font></td>
+    <td><font size=2>9385</font></td>
+    <td><font size=2>860</font></td>
+    <td><font size=2>335</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -120,41 +121,41 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Grant(6)</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>8660</font></td>
-    <td><font size=2>8050</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>9280</font></td>
+    <td><font size=2>8735</font></td>
     <td><font size=2>1070</font></td>
     <td><font size=2>330</font></td>
     <td><font size=2>3</font></td>
+<tr><td><font size=2>John(8)</font></td>
+    <td><font size=2>7</font></td>
+    <td><font size=2>6</font></td>
+    <td><font size=2>7725</font></td>
+    <td><font size=2>7295</font></td>
+    <td><font size=2>890</font></td>
+    <td><font size=2>270</font></td>
+    <td><font size=2>0</font></td>
 <tr><td><font size=2>Roger(10)</font></td>
     <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>7610</font></td>
+    <td><font size=2>7</font></td>
     <td><font size=2>7970</font></td>
+    <td><font size=2>8615</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>1</font></td>
-<tr><td><font size=2>John(8)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>6835</font></td>
-    <td><font size=2>6960</font></td>
-    <td><font size=2>795</font></td>
-    <td><font size=2>270</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Sam(4)</font></td>
-    <td><font size=2>5</font></td>
+    <td><font size=2>6</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>6255</font></td>
-    <td><font size=2>7025</font></td>
+    <td><font size=2>6580</font></td>
+    <td><font size=2>7305</font></td>
     <td><font size=2>785</font></td>
     <td><font size=2>255</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(2)</font></td>
-    <td><font size=2>4</font></td>
+    <td><font size=2>5</font></td>
     <td><font size=2>8</font></td>
-    <td><font size=2>6950</font></td>
-    <td><font size=2>7725</font></td>
+    <td><font size=2>7635</font></td>
+    <td><font size=2>8345</font></td>
     <td><font size=2>860</font></td>
     <td><font size=2>160</font></td>
     <td><font size=2>1</font></td>
